@@ -1,7 +1,7 @@
 Please visit the ENet homepage at http://enet.bespin.org for installation
 and usage instructions.
 
-If you obtained this package from CVS, the quick description on how to build
+If you obtained this package from github, the quick description on how to build
 is:
 
 # Generate the build system.
